CSV UI refactor
A bit easier now to use

--- a/src/mvp.css
+++ b/src/mvp.css
@@ -107,6 +107,7 @@ header nav img {
 
 section header {
     padding-top: 0;
+    padding-bottom: 0;
     width: 100%;
 }
 
@@ -183,6 +184,7 @@ h4,
 h5,
 h6 {
     line-height: var(--line-height);
+    margin: 0.5rem 0;
 }
 
 mark {
